--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["ES6"],
     "target": "es2016",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
