--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
     "reflect-metadata": "^0.1.13",
